--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Back AlvarezGSM System",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
-    "npm": "^6.6.0"
+    "npm": "^6.6.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "scripts": {
