--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
+    "mongoose": "^5.4.6",
     "morgan": "^1.9.1",
     "npm": "^6.6.0",
     "path": "^0.12.7"
