--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-promise-router": "^3.0.3",
     "lodash": "^4.17.11",
     "mongoose": "^5.4.6",
     "morgan": "^1.9.1",
