--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-promise-router": "^3.0.3",
+    "joi": "^14.3.1",
     "lodash": "^4.17.11",
     "mongoose": "^5.4.6",
     "morgan": "^1.9.1",
