--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Back AlvarezGSM System",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-promise-router": "^3.0.3",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.4.6",
     "morgan": "^1.9.1",
